workloads/manifests/metabase/templates/30-ingress.yaml
# Internal access over NetBird: https://metabase.int.hwkn.dev (see cluster-addons/manifests/ingress).
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase
  namespace: metabase
spec:
  ingressClassName: internal
  rules:
    - host: metabase.int.hwkn.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metabase
                port:
                  number: 3000
